--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,22 @@ body {
 #root {
   min-height: 100vh;
 }
+
+.MuiMenu-paper .MuiMenu-list[role='listbox'] {
+  outline: 1px solid #d0d5dd;
+  outline-offset: -1px;
+}
+
+.MuiMenu-paper .MuiMenu-list[role='listbox'] .MuiMenuItem-root {
+  position: relative;
+}
+
+.MuiMenu-paper .MuiMenu-list[role='listbox'] .MuiMenuItem-root:not(:last-of-type)::after {
+  content: '';
+  position: absolute;
+  left: 12px;
+  right: 12px;
+  bottom: 0;
+  height: 1px;
+  background-color: #e4e7ec;
+}
